Hero alignment fix (#36)

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -68,6 +68,7 @@ a.button {
   border: 1px solid transparent;
   line-height: 1;
   border-radius: 2px;
+  border-width: 2px;
   height: unset;
 
   @include buttonSize($normal-font-size, $normal-padding);
