--- a/src/components/HeroSection/HeroSection.module.scss
+++ b/src/components/HeroSection/HeroSection.module.scss
@@ -1,11 +1,8 @@
 @import '../../styles/styleSetup.scss';
 
 .heroWrapper {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   padding: 165px 0 130px 0;
-  text-align: left;
   background-color: $primary;
   color: $white;
 
@@ -34,7 +31,6 @@
     font-weight: bold;
 
     @include mobile() {
-      max-width: 320px;
       margin-bottom: 16px;
       font-size: 50px;
       line-height: 50px;
@@ -42,13 +38,11 @@
   }
 
   h3 {
-    max-width: 528px;
     font-size: 34px;
     font-weight: 600;
     line-height: 40px;
 
     @include mobile() {
-      max-width: 320px;
       font-size: 20px;
       font-weight: normal;
       line-height: 29px;
